# cpp-testbed

./: CMakeLists.txt  README.md  main.cpp
type-deduction/: CMakeLists.txt  typededuction.cpp
type-deduction/include/: typededuction.h
